<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTPActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/exo_2_bold"
        android:text="@string/company_name"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/OTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/outfit_medium"
        android:layout_marginLeft="20dp"
        android:textSize="25sp"
        android:textColor="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent" />



    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_content"
        app:layout_constraintTop_toBottomOf="@+id/OTP"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="15sp"
        android:fontFamily="@font/red_hat_display"
        android:justificationMode="inter_word"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnStuAttendance"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:elevation="5dp"
        android:foreground="?attr/selectableItemBackground"
        android:padding="13dp"
        app:cardCornerRadius="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_gradient"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/red_hat_display"
                android:gravity="center"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

