<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ForgetPasswordActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo_2_bold"
        android:text="@string/company_name"
        android:textSize="40dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/forget_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="20dp"
        android:textSize="25sp"
        android:layout_marginTop="80dp"
        android:textColor="@color/green"/>

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/back"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/forget_password_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_password_text"
        app:layout_constraintTop_toBottomOf="@+id/forget_Password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/red_hat_display"
        android:textSize="15sp"
        android:layout_marginRight="20dp"
        android:justificationMode="inter_word"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="username"
        android:fontFamily="@font/red_hat_display"
        app:layout_constraintTop_toBottomOf="@+id/forget_password_content"
        android:hint="@string/email_hint"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/red_hat_display"
            android:inputType="textEmailAddress"
            android:drawableRight="@drawable/baseline_arrow_forward_24"
            android:padding="16dp" />


    </com.google.android.material.textfield.TextInputLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>