<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpOTPActivity">

    <LinearLayout
        android:id="@+id/time_resend"
        android:layout_width="350dp"
        android:layout_height="42dp"
        android:layout_marginTop="152dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test4otp"
        tools:layout_editor_absoluteX="41dp">

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/red_hat_display"
            android:paddingStart="20dp"
            android:text="00:00"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/resendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:background="?android:selectableItemBackground"
            android:fontFamily="@font/red_hat_display"
            android:text="@string/resendotp"
            android:textColor="@color/green"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:padding="8dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/exo_2_bold"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/company_name"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/OTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/otp"
        android:textColor="@color/green"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView

        android:id="@+id/test4otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/red_hat_display"
        android:padding="5dp"
        android:text="@string/otp_content"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/OTP" />


    <com.chaos.view.PinView
        android:id="@+id/pinerview"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:cursorVisible="true"
        android:gravity="center"
        android:inputType="number"
        android:itemBackground="@drawable/box_background"
        app:hideLineWhenFilled="false"
        app:itemCount="4"
        app:itemHeight="80dp"
        app:itemRadius="10dp"
        app:itemWidth="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test4otp" />


    <androidx.cardview.widget.CardView
        android:id="@+id/btnVerify"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:elevation="5dp"
        android:foreground="?attr/selectableItemBackground"
        android:padding="13dp"
        app:cardCornerRadius="66dp"
        app:layout_constraintTop_toBottomOf="@+id/pinerview"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_gradient"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/red_hat_display"
                android:gravity="center"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>